--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://kit.fontawesome.com/2b4355a0ac.js" crossorigin="anonymous"></script>
+    <title>Todolist</title>
   </head>
   <body>
     <div id="root"></div>
